homework/5.kubernetes-network/net_tools/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: lesson5
spec:
  ports:
  - port: 54320
    targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: redmine
  namespace: lesson5
spec:
  ports:
  - port: 30000
    targetPort: 3000
  selector:
    app: redmine
  type: ClusterIP
